Setup base structure for about me page and login

--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 </head>
 
 <body>
-  Hello world
+  <!-- Navigation -->
+  <nav>
+      <ul>
+          <li><a href="#">About Me</a></li>
+          <li><a href="registration.html">Registration Form</a></li>
+      </ul>
+  </nav>
+
+  <!-- Content for About Me Page -->
+   <section>
+       <h1>About Me</h1>
+       <p>My name is Chisom Nnabuihe, I joined altschool to become a Devops engineer.</p>
+       <p>I plan to build skills that would help me contribute more in my current role as a Solutions architect</p>
+    </section>
   <script src="script.js"></script>
 
   <!--
