--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>About Me</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -12,7 +12,7 @@
   <!-- Navigation -->
   <nav>
       <ul>
-          <li><a href="#">About Me</a></li>
+          <li><a href="index.html">About Me</a></li>
           <li><a href="registration.html">Registration Form</a></li>
       </ul>
   </nav>
@@ -30,7 +30,8 @@
   page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
   teal, blue, blurple, magenta, pink!
   -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+<!--  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>-->
+  
 </body>
 
 </html>
