--- a/registration.html
+++ b/registration.html
@@ -7,17 +7,52 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <h1>Registration Form</h1>
-  <form>
-    <label for="fname">First Name:</label>
-    <input type="text" id="fname" name="fname"><br><br>
-    <label for="lname">Last Name:</label>
-    <input type="text" id="lname" name="lname"><br><br>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email"><br><br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password"><br><br>
-    <input type="submit" value="Submit">
-  </form>
+  <!-- Navigation -->
+  <nav>
+      <ul>
+          <li><a href="index.html">About Me</a></li>
+          <li><a href="registration.html">Registration Form</a></li>
+      </ul>
+  </nav>
+
+  <div class="container">
+    <div class="image-section">
+
+      <div class="image-placeholder"></div>
+    </div>
+    <div class="form-section">
+      <h1>Registration Form</h1>
+      <form>
+        <div class="fields">
+          <div>
+            <label for="fname">First Name:</label>
+            <input type="text" id="fname" name="fname">
+          </div>
+          <div>
+            <label for="lname">Last Name:</label>
+            <input type="text" id="lname" name="lname">
+          </div>
+        </div>
+        <div class="fields">
+          <div>
+            <label for="gender">Gender:</label>
+            <select id="gender" name="gender">
+              <option value="male">Male</option>
+              <option value="female">Female</option>
+            </select>
+          </div>
+          <div class="field">
+            <label for="dob">Date of Birth:</label>
+            <input type="date" id="dob" name="dob">
+          </div>
+        </div>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email"><br><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password"><br><br>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+  </div>
 </body>
 </html>
